--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
     {
       "source": "/((?!api).*)",
       "destination": "/index.html"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
