--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://newsiest-unprofessing-bryleigh.ngrok-free.dev
+VITE_API_BASE_URL=https://prolific-recreation-production.up.railway.app
